Fix arrows cutting off episodes in top and left

--- a/ui/src/app/pages/shows/shows.page.scss
+++ b/ui/src/app/pages/shows/shows.page.scss
@@ -84,6 +84,7 @@
       width: 100%;
       display: flex;
       flex-direction: column;
+      padding: 45px;
     }
     
     .arrow-bar-top,
@@ -99,20 +100,14 @@
       color: white;
     }
     
-    .arrow-bar-bottom {
-      bottom: 0;
+    .arrow-bar-top {
+      top: 0;
       width: 100%;
       height: 30px;
     }
     
-    .arrow-bar-right {
-      right: 0;
-      width: 30px;
-      height: 100%;
-    }
-    
-    .arrow-bar-top {
-      top: 0;
+    .arrow-bar-bottom {
+      bottom: 0;
       width: 100%;
       height: 30px;
     }
@@ -122,7 +117,13 @@
       width: 30px;
       height: 100%;
     }
-  
+    
+    .arrow-bar-right {
+      right: 0;
+      width: 30px;
+      height: 100%;
+    }
+
     .episode {
       min-width: 45px;
       height: 45px;
